--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -155,11 +155,15 @@ hr.small {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(../img/bg03.jpg) no-repeat center center scroll;
+    background: url(../img/bg04.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+}
+
+.txtcolour {
+    color: white;
 }
 
 /* About */
