--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -155,7 +155,7 @@ hr.small {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(../img/bg06_1.jpg) no-repeat center center scroll;
+    background: url(../img/bg03.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -244,9 +244,11 @@ hr.small {
 
 /* Footer */
 
+/*
 footer {
     padding: 100px 0;
 }
+*/
 
 #about, .call-to-action {
     background-color: #90CAF9;
