--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -155,7 +155,7 @@ hr.small {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(../img/bg03.jpg) no-repeat center center scroll;
+    background: url(../img/bg06_1.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -202,10 +202,15 @@ hr.small {
     -o-background-size: cover;
 }
 
+.footer {
+    color: #fff;
+    background-color: #f04c59;
+}
 /* Portfolio */
 
 .portfolio {
     padding: 50px 0;
+    background-color: #f3f3f3;
 }
 
 .portfolio-item {
@@ -228,6 +233,8 @@ hr.small {
 
 .call-to-action .btn {
     margin: 10px;
+    background-color: #f04c59;
+    border: none;
 }
 
 /* Map */
@@ -251,5 +258,9 @@ footer {
 */
 
 #about, .call-to-action {
-    background-color: #90CAF9;
+    background-color: #fff;
+}
+
+.text-muted, .fa {
+    color: #fff;
 }
